# sue_books_org

./: Dockerfile  README.md  __init__.py  docker-compose.yaml  docker-compose.yaml.backup  endpoints.py  frontend_app.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
.ipynb_checkpoints/: sales_data_cleaning-checkpoint.ipynb
config/: airflow.cfg  entrypoint-extra.sh
dags/: pipeline.py  pipeline_dag.py  schema_validation.py  tables.py  tests.py  utils.py
datasets/: books.csv  users.csv
datasets/processed/: books_clean.parquet  daily_sales.parquet  top_book.parquet  transactions_clean.parquet  users_clean.parquet
datasets/processed/schema/baselines/: books.schema.json  transactions.schema.json  users.schema.json
datasets/processed/schema/reports/: books.report.json
sql/: olap_schema.sql  oltp_schema.sql
static/: styles.css
templates/: dashboard.html  purchases.html
tests/: README.md  conftest.py  test_pipeline_dag.py  test_schema_validation.py  test_tables.py  test_utils.py
