[project]
name = "sales-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.0.6",
    "asyncpg>=0.30.0",
    "polars>=1.6.0",
    "psycopg2>=2.9.10",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "flask>=3.0.3",
    "requests>=2.32.3",
    "numpy>=2.3.3",
    "apache-airflow-providers-celery>=3.12.3",
    "pytest-mock==3.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["dags"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# load_dotenv() before local imports is intentional for Airflow DAG loading.
"dags/pipeline_dag.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["dags"]
